Parser.d/y.output
Terminals unused in grammar

   ZERO
   STRNAME
   TITLE
   ESET
   C3D8R
   TIMESTEPID
   IDNO
   ELEMENTTYPE


Rules useless in parser due to conflicts

  128 History: /* empty */


State 0 conflicts: 35 shift/reduce, 36 reduce/reduce
State 37 conflicts: 36 shift/reduce, 36 reduce/reduce
State 128 conflicts: 3 reduce/reduce
State 315 conflicts: 1 shift/reduce
State 385 conflicts: 1 shift/reduce
State 386 conflicts: 1 shift/reduce


Grammar

    0 $accept: FinalizedData $end

    1 FinalizedData: All END

    2 All: Component
    3    | All Component

    4 Component: NodeSet
    5          | ElemSet
    6          | MatSet
    7          | DirichletBC
    8          | NeumanBC
    9          | IVel
   10          | IAcc
   11          | IStr
   12          | SetLarge
   13          | HourGlassControl
   14          | SetGravity
   15          | SetAttribute
   16          | ReadCurve
   17          | SetEndTime
   18          | Pressure
   19          | BoundaryFix
   20          | TimeStep
   21          | Solver
   22          | OutInfo
   23          | History
   24          | HisOutput
   25          | NodeForHis
   26          | ElemForHis
   27          | WriteStatus
   28          | DeleteElement
   29          | Bulk_Visco
   30          | DebugFlg
   31          | ClearDV
   32          | LocalDamping
   33          | CombinedDamping
   34          | StaticTerm
   35          | ExportFlac
   36          | NodePart
   37          | ElemPart
   38          | FenQu

   39 NodeSet: NODE NewLine Node
   40        | NodeSet Node

   41 Node: Integer Float Float Float NewLine
   42     | Integer Float Float NewLine
   43     | Integer Float NewLine

   44 ElemSet: ELEMENT COMMA TYPE EQUALSIGN ET_SOLID NewLine Element_Solid_List
   45        | ELEMENT COMMA TYPE EQUALSIGN ET_SOLID COMMA EPART EQUALSIGN Integer NewLine Element_Solid_List
   46        | ELEMENT COMMA EPART EQUALSIGN Integer COMMA TYPE EQUALSIGN ET_SOLID NewLine Element_Solid_List
   47        | ElemSet Element_Solid
   48        | ELEMENT NewLine Element
   49        | ElemSet Element

   50 Element: Integer Integer NodeNums NewLine

   51 Element_Solid_List: Integer NodeNums NewLine
   52                   | Element_Solid_List Integer NodeNums NewLine

   53 NodeNums: Integer
   54         | NodeNums Integer
   55         | GENERATE Integer Integer Integer

   56 MatSet: MATERIAL COMMA ID EQUALSIGN Integer COMMA TYPE EQUALSIGN MT_ELASTIC NewLine PropsList
   57       | MATERIAL COMMA TYPE EQUALSIGN MT_ELASTIC COMMA ID EQUALSIGN Integer NewLine PropsList
   58       | MATERIAL NewLine Integer Integer PropsList
   59       | MATERIAL NewLine PropsList

   60 PropsList: Props NewLine
   61          | PropsList Props NewLine

   62 Props: Float
   63      | Props Float

   64 DirichletBC: DISP NewLine BCDataList

   65 NeumanBC: FORCE NewLine BCDataList

   66 IVel: IVEL NewLine BCDataList

   67 IAcc: IACC NewLine BCDataList

   68 BCDataList: BC_Data
   69           | BCDataList BC_Data

   70 BC_Data: Integer Integer Integer Float NewLine
   71        | Integer Integer NewLine

   72 BoundaryFix: FIXED NewLine BCFDataList

   73 BCFDataList: BCF_Data
   74            | BCFDataList BCF_Data

   75 BCF_Data: Integer Integer Integer Integer NewLine
   76         | Integer Integer NewLine
   77         | Integer Integer Integer NewLine

   78 IStr: ISTR NewLine IStressList

   79 IStressList: IStressData
   80            | IStressList IStressData

   81 IStressData: Integer Float Float Float Float Float Float NewLine

   82 Pressure: PRESSURE NewLine PressureList

   83 PressureList: PresData
   84             | PressureList PresData

   85 PresData: Integer Float Integer Integer Integer Integer NewLine

   86 SetLarge: JAUMA NewLine

   87 HourGlassControl: HOURGLASS NewLine Integer NewLine
   88                 | HOURGLASS NewLine Integer Float NewLine

   89 SetGravity: GRAV NewLine Float Float Float NewLine

   90 SetAttribute: ATT NewLine AttList
   91             | ATT COMMA TYPE EQUALSIGN EPART NewLine PAttList

   92 AttList: AttData
   93        | AttList AttData

   94 AttData: Integer Integer NewLine
   95        | Integer Integer Integer NewLine

   96 PAttList: PAttData
   97         | PAttList PAttData

   98 PAttData: Integer Integer NewLine
   99         | Integer Integer Integer NewLine

  100 ReadCurve: CURVE COMMA ID EQUALSIGN Integer NewLine CurveDataList
  101          | CURVE NewLine CurveDataList

  102 CurveDataList: CurveData
  103              | CurveDataList CurveData

  104 CurveData: Float Float NewLine

  105 SetEndTime: TERM NewLine Float NewLine

  106 TimeStep: /* empty */
  107         | TIMESTEP NewLine Float NewLine
  108         | TIMESTEP COMMA TYPE EQUALSIGN TIMESTEP_AUTO NewLine Float NewLine
  109         | TIMESTEP COMMA TYPE EQUALSIGN TIMESTEP_FIXED NewLine Float NewLine
  110         | TIMESTEP COMMA TYPE EQUALSIGN TIMESTEP_CURVE NewLine Integer NewLine

  111 Solver: SOLV NewLine DYNA NewLine

  112 OutInfo: OUTPUT NewLine Integer Integer NewLine NOutList NewLine EOutList NewLine
  113        | OUTPUT NewLine Integer Float NewLine NOutList NewLine EOutList NewLine
  114        | OUTPUT NewLine Float NewLine NOutList NewLine EOutList NewLine
  115        | OUTPUT NewLine Float NewLine
  116        | OUTPUT NewLine Integer Integer NewLine
  117        | OUTPUT NewLine Integer Float NewLine
  118        | OUTPUT NewLine Integer Integer NewLine NOutList NewLine
  119        | OUTPUT NewLine Integer Float NewLine NOutList NewLine
  120        | OUTPUT NewLine Float NewLine NOutList NewLine
  121        | OUTPUT NewLine Integer Integer NewLine EOutList NewLine
  122        | OUTPUT NewLine Integer Float NewLine EOutList NewLine
  123        | OUTPUT NewLine Float NewLine EOutList NewLine

  124 NOutList: NOUTPUTID
  125         | NOutList NOUTPUTID

  126 EOutList: EOUTPUTID
  127         | EOutList EOUTPUTID

  128 History: /* empty */
  129        | HISTORY NewLine Integer NewLine

  130 HisOutput: HISOUTPUT NewLine Float NewLine

  131 NodeForHis: HISNODE NewLine HisNodeList

  132 HisNodeList: Integer NewLine
  133            | HisNodeList Integer NewLine

  134 ElemForHis: HISELEM NewLine HisEleList

  135 HisEleList: Integer NewLine
  136           | HisEleList Integer NewLine

  137 WriteStatus: STATUSFILE NewLine Float NewLine
  138            | STATUSFILE NewLine Integer NewLine

  139 DeleteElement: REMOVE NewLine DelElList
  140              | REMOVE COMMA TYPE EQUALSIGN EPART NewLine DelPList

  141 DelElList: Integer NewLine
  142          | DelElList Integer NewLine

  143 DelPList: Integer NewLine
  144         | DelPList Integer NewLine

  145 Bulk_Visco: BULK_VISCOSITY NewLine Float Float NewLine

  146 DebugFlg: DEBUGFLG NewLine

  147 ClearDV: CLEARDVFLG NewLine

  148 LocalDamping: LOCALDAMP NewLine
  149             | LOCALDAMP NewLine Float NewLine

  150 CombinedDamping: COMBINEDDAMP NewLine
  151                | COMBINEDDAMP NewLine Float NewLine

  152 StaticTerm: STATICTERM NewLine
  153           | STATICTERM NewLine Float NewLine

  154 ExportFlac: EXPORTFLAC NewLine

  155 NodePart: NODEPART COMMA ID EQUALSIGN Integer NewLine PartList

  156 ElemPart: ELEMPART COMMA ID EQUALSIGN Integer NewLine PartList

  157 PartList: NodeNums NewLine
  158         | PartList NodeNums NewLine

  159 FenQu: FENQUPL NewLine Float Float Float Float NewLine

  160 Integer: IntConstant

  161 Float: IntConstant
  162      | DblConstant


Terminals, with rules where they appear

$end (0) 0
error (256)
IntConstant (258) 160 161
DblConstant (259) 162
NODE (260) 39
NewLine (261) 39 41 42 43 44 45 46 48 50 51 52 56 57 58 59 60 61 64
    65 66 67 70 71 72 75 76 77 78 81 82 85 86 87 88 89 90 91 94 95
    98 99 100 101 104 105 107 108 109 110 111 112 113 114 115 116 117
    118 119 120 121 122 123 129 130 131 132 133 134 135 136 137 138
    139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154
    155 156 157 158 159
ELEMENT (262) 44 45 46 48
ZERO (263)
STRNAME (264)
END (265) 1
MATERIAL (266) 56 57 58 59
DISP (267) 64
FORCE (268) 65
IVEL (269) 66
IACC (270) 67
ISTR (271) 78
JAUMA (272) 86
GRAV (273) 89
ATT (274) 90 91
CURVE (275) 100 101
TERM (276) 105
PRESSURE (277) 82
FIXED (278) 72
TIMESTEP (279) 107 108 109 110
DYNA (280) 111
SOLV (281) 111
OUTPUT (282) 112 113 114 115 116 117 118 119 120 121 122 123
NOUTPUTID (283) 124 125
EOUTPUTID (284) 126 127
HISTORY (285) 129
HISOUTPUT (286) 130
HOURGLASS (287) 87 88
STATUSFILE (288) 137 138
TITLE (289)
REMOVE (290) 139 140
BULK_VISCOSITY (291) 145
HISNODE (292) 131
HISELEM (293) 134
DEBUGFLG (294) 146
CLEARDVFLG (295) 147
LOCALDAMP (296) 148 149
COMBINEDDAMP (297) 150 151
STATICTERM (298) 152 153
EXPORTFLAC (299) 154
NODEPART (300) 155
ELEMPART (301) 156
GENERATE (302) 55
FENQUPL (303) 159
TYPE (304) 44 45 46 56 57 91 108 109 110 140
ESET (305)
C3D8R (306)
TIMESTEPID (307)
TIMESTEP_FIXED (308) 109
TIMESTEP_CURVE (309) 110
TIMESTEP_AUTO (310) 108
ID (311) 56 57 100 155 156
IDNO (312)
COMMA (313) 44 45 46 56 57 91 100 108 109 110 140 155 156
ELEMENTTYPE (314)
EPART (315) 45 46 91 140
EQUALSIGN (316) 44 45 46 56 57 91 100 108 109 110 140 155 156
Element_Solid (317) 47
ET_SOLID (318) 44 45 46
MT_ELASTIC (319) 56 57


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
FinalizedData (66)
    on left: 1, on right: 0
All (67)
    on left: 2 3, on right: 1 3
Component (68)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33 34 35 36 37 38, on right: 2 3
NodeSet (69)
    on left: 39 40, on right: 4 40
Node (70)
    on left: 41 42 43, on right: 39 40
ElemSet (71)
    on left: 44 45 46 47 48 49, on right: 5 47 49
Element (72)
    on left: 50, on right: 48 49
Element_Solid_List (73)
    on left: 51 52, on right: 44 45 46 52
NodeNums (74)
    on left: 53 54 55, on right: 50 51 52 54 157 158
MatSet (75)
    on left: 56 57 58 59, on right: 6
PropsList (76)
    on left: 60 61, on right: 56 57 58 59 61
Props (77)
    on left: 62 63, on right: 60 61 63
DirichletBC (78)
    on left: 64, on right: 7
NeumanBC (79)
    on left: 65, on right: 8
IVel (80)
    on left: 66, on right: 9
IAcc (81)
    on left: 67, on right: 10
BCDataList (82)
    on left: 68 69, on right: 64 65 66 67 69
BC_Data (83)
    on left: 70 71, on right: 68 69
BoundaryFix (84)
    on left: 72, on right: 19
BCFDataList (85)
    on left: 73 74, on right: 72 74
BCF_Data (86)
    on left: 75 76 77, on right: 73 74
IStr (87)
    on left: 78, on right: 11
IStressList (88)
    on left: 79 80, on right: 78 80
IStressData (89)
    on left: 81, on right: 79 80
Pressure (90)
    on left: 82, on right: 18
PressureList (91)
    on left: 83 84, on right: 82 84
PresData (92)
    on left: 85, on right: 83 84
SetLarge (93)
    on left: 86, on right: 12
HourGlassControl (94)
    on left: 87 88, on right: 13
SetGravity (95)
    on left: 89, on right: 14
SetAttribute (96)
    on left: 90 91, on right: 15
AttList (97)
    on left: 92 93, on right: 90 93
AttData (98)
    on left: 94 95, on right: 92 93
PAttList (99)
    on left: 96 97, on right: 91 97
PAttData (100)
    on left: 98 99, on right: 96 97
ReadCurve (101)
    on left: 100 101, on right: 16
CurveDataList (102)
    on left: 102 103, on right: 100 101 103
CurveData (103)
    on left: 104, on right: 102 103
SetEndTime (104)
    on left: 105, on right: 17
TimeStep (105)
    on left: 106 107 108 109 110, on right: 20
Solver (106)
    on left: 111, on right: 21
OutInfo (107)
    on left: 112 113 114 115 116 117 118 119 120 121 122 123, on right:
    22
NOutList (108)
    on left: 124 125, on right: 112 113 114 118 119 120 125
EOutList (109)
    on left: 126 127, on right: 112 113 114 121 122 123 127
History (110)
    on left: 128 129, on right: 23
HisOutput (111)
    on left: 130, on right: 24
NodeForHis (112)
    on left: 131, on right: 25
HisNodeList (113)
    on left: 132 133, on right: 131 133
ElemForHis (114)
    on left: 134, on right: 26
HisEleList (115)
    on left: 135 136, on right: 134 136
WriteStatus (116)
    on left: 137 138, on right: 27
DeleteElement (117)
    on left: 139 140, on right: 28
DelElList (118)
    on left: 141 142, on right: 139 142
DelPList (119)
    on left: 143 144, on right: 140 144
Bulk_Visco (120)
    on left: 145, on right: 29
DebugFlg (121)
    on left: 146, on right: 30
ClearDV (122)
    on left: 147, on right: 31
LocalDamping (123)
    on left: 148 149, on right: 32
CombinedDamping (124)
    on left: 150 151, on right: 33
StaticTerm (125)
    on left: 152 153, on right: 34
ExportFlac (126)
    on left: 154, on right: 35
NodePart (127)
    on left: 155, on right: 36
ElemPart (128)
    on left: 156, on right: 37
PartList (129)
    on left: 157 158, on right: 155 156 158
FenQu (130)
    on left: 159, on right: 38
Integer (131)
    on left: 160, on right: 41 42 43 45 46 50 51 52 53 54 55 56 57
    58 70 71 75 76 77 81 85 87 88 94 95 98 99 100 110 112 113 116 117
    118 119 121 122 129 132 133 135 136 138 141 142 143 144 155 156
Float (132)
    on left: 161 162, on right: 41 42 43 62 63 70 81 85 88 89 104 105
    107 108 109 113 114 115 117 119 120 122 123 130 137 145 149 151
    153 159


State 0

    0 $accept: . FinalizedData $end

    NODE            shift, and go to state 1
    ELEMENT         shift, and go to state 2
    MATERIAL        shift, and go to state 3
    DISP            shift, and go to state 4
    FORCE           shift, and go to state 5
    IVEL            shift, and go to state 6
    IACC            shift, and go to state 7
    ISTR            shift, and go to state 8
    JAUMA           shift, and go to state 9
    GRAV            shift, and go to state 10
    ATT             shift, and go to state 11
    CURVE           shift, and go to state 12
    TERM            shift, and go to state 13
    PRESSURE        shift, and go to state 14
    FIXED           shift, and go to state 15
    TIMESTEP        shift, and go to state 16
    SOLV            shift, and go to state 17
    OUTPUT          shift, and go to state 18
    HISTORY         shift, and go to state 19
    HISOUTPUT       shift, and go to state 20
    HOURGLASS       shift, and go to state 21
    STATUSFILE      shift, and go to state 22
    REMOVE          shift, and go to state 23
    BULK_VISCOSITY  shift, and go to state 24
    HISNODE         shift, and go to state 25
    HISELEM         shift, and go to state 26
    DEBUGFLG        shift, and go to state 27
    CLEARDVFLG      shift, and go to state 28
    LOCALDAMP       shift, and go to state 29
    COMBINEDDAMP    shift, and go to state 30
    STATICTERM      shift, and go to state 31
    EXPORTFLAC      shift, and go to state 32
    NODEPART        shift, and go to state 33
    ELEMPART        shift, and go to state 34
    FENQUPL         shift, and go to state 35

    NODE            [reduce using rule 106 (TimeStep)]
    NODE            [reduce using rule 128 (History)]
    ELEMENT         [reduce using rule 106 (TimeStep)]
    ELEMENT         [reduce using rule 128 (History)]
    END             reduce using rule 106 (TimeStep)
    END             [reduce using rule 128 (History)]
    MATERIAL        [reduce using rule 106 (TimeStep)]
    MATERIAL        [reduce using rule 128 (History)]
    DISP            [reduce using rule 106 (TimeStep)]
    DISP            [reduce using rule 128 (History)]
    FORCE           [reduce using rule 106 (TimeStep)]
    FORCE           [reduce using rule 128 (History)]
    IVEL            [reduce using rule 106 (TimeStep)]
    IVEL            [reduce using rule 128 (History)]
    IACC            [reduce using rule 106 (TimeStep)]
    IACC            [reduce using rule 128 (History)]
    ISTR            [reduce using rule 106 (TimeStep)]
    ISTR            [reduce using rule 128 (History)]
    JAUMA           [reduce using rule 106 (TimeStep)]
    JAUMA           [reduce using rule 128 (History)]
    GRAV            [reduce using rule 106 (TimeStep)]
    GRAV            [reduce using rule 128 (History)]
    ATT             [reduce using rule 106 (TimeStep)]
    ATT             [reduce using rule 128 (History)]
    CURVE           [reduce using rule 106 (TimeStep)]
    CURVE           [reduce using rule 128 (History)]
    TERM            [reduce using rule 106 (TimeStep)]
    TERM            [reduce using rule 128 (History)]
    PRESSURE        [reduce using rule 106 (TimeStep)]
    PRESSURE        [reduce using rule 128 (History)]
    FIXED           [reduce using rule 106 (TimeStep)]
    FIXED           [reduce using rule 128 (History)]
    TIMESTEP        [reduce using rule 106 (TimeStep)]
    TIMESTEP        [reduce using rule 128 (History)]
    SOLV            [reduce using rule 106 (TimeStep)]
    SOLV            [reduce using rule 128 (History)]
    OUTPUT          [reduce using rule 106 (TimeStep)]
    OUTPUT          [reduce using rule 128 (History)]
    HISTORY         [reduce using rule 106 (TimeStep)]
    HISTORY         [reduce using rule 128 (History)]
    HISOUTPUT       [reduce using rule 106 (TimeStep)]
    HISOUTPUT       [reduce using rule 128 (History)]
    HOURGLASS       [reduce using rule 106 (TimeStep)]
    HOURGLASS       [reduce using rule 128 (History)]
    STATUSFILE      [reduce using rule 106 (TimeStep)]
    STATUSFILE      [reduce using rule 128 (History)]
    REMOVE          [reduce using rule 106 (TimeStep)]
    REMOVE          [reduce using rule 128 (History)]
    BULK_VISCOSITY  [reduce using rule 106 (TimeStep)]
    BULK_VISCOSITY  [reduce using rule 128 (History)]
    HISNODE         [reduce using rule 106 (TimeStep)]
    HISNODE         [reduce using rule 128 (History)]
    HISELEM         [reduce using rule 106 (TimeStep)]
    HISELEM         [reduce using rule 128 (History)]
    DEBUGFLG        [reduce using rule 106 (TimeStep)]
    DEBUGFLG        [reduce using rule 128 (History)]
    CLEARDVFLG      [reduce using rule 106 (TimeStep)]
    CLEARDVFLG      [reduce using rule 128 (History)]
    LOCALDAMP       [reduce using rule 106 (TimeStep)]
    LOCALDAMP       [reduce using rule 128 (History)]
    COMBINEDDAMP    [reduce using rule 106 (TimeStep)]
    COMBINEDDAMP    [reduce using rule 128 (History)]
    STATICTERM      [reduce using rule 106 (TimeStep)]
    STATICTERM      [reduce using rule 128 (History)]
    EXPORTFLAC      [reduce using rule 106 (TimeStep)]
    EXPORTFLAC      [reduce using rule 128 (History)]
    NODEPART        [reduce using rule 106 (TimeStep)]
    NODEPART        [reduce using rule 128 (History)]
    ELEMPART        [reduce using rule 106 (TimeStep)]
    ELEMPART        [reduce using rule 128 (History)]
    FENQUPL         [reduce using rule 106 (TimeStep)]
    FENQUPL         [reduce using rule 128 (History)]
    $default        reduce using rule 106 (TimeStep)

    FinalizedData     go to state 36
    All               go to state 37
    Component         go to state 38
    NodeSet           go to state 39
    ElemSet           go to state 40
    MatSet            go to state 41
    DirichletBC       go to state 42
    NeumanBC          go to state 43
    IVel              go to state 44
    IAcc              go to state 45
    BoundaryFix       go to state 46
    IStr              go to state 47
    Pressure          go to state 48
    SetLarge          go to state 49
    HourGlassControl  go to state 50
    SetGravity        go to state 51
    SetAttribute      go to state 52
    ReadCurve         go to state 53
    SetEndTime        go to state 54
    TimeStep          go to state 55
    Solver            go to state 56
    OutInfo           go to state 57
    History           go to state 58
    HisOutput         go to state 59
    NodeForHis        go to state 60
    ElemForHis        go to state 61
    WriteStatus       go to state 62
    DeleteElement     go to state 63
    Bulk_Visco        go to state 64
    DebugFlg          go to state 65
    ClearDV           go to state 66
    LocalDamping      go to state 67
    CombinedDamping   go to state 68
    StaticTerm        go to state 69
    ExportFlac        go to state 70
    NodePart          go to state 71
    ElemPart          go to state 72
    FenQu             go to state 73


State 1

   39 NodeSet: NODE . NewLine Node

    NewLine  shift, and go to state 74


State 2

   44 ElemSet: ELEMENT . COMMA TYPE EQUALSIGN ET_SOLID NewLine Element_Solid_List
   45        | ELEMENT . COMMA TYPE EQUALSIGN ET_SOLID COMMA EPART EQUALSIGN Integer NewLine Element_Solid_List
   46        | ELEMENT . COMMA EPART EQUALSIGN Integer COMMA TYPE EQUALSIGN ET_SOLID NewLine Element_Solid_List
   48        | ELEMENT . NewLine Element

    NewLine  shift, and go to state 75
    COMMA    shift, and go to state 76


State 3

   56 MatSet: MATERIAL . COMMA ID EQUALSIGN Integer COMMA TYPE EQUALSIGN MT_ELASTIC NewLine PropsList
   57       | MATERIAL . COMMA TYPE EQUALSIGN MT_ELASTIC COMMA ID EQUALSIGN Integer NewLine PropsList
   58       | MATERIAL . NewLine Integer Integer PropsList
   59       | MATERIAL . NewLine PropsList

    NewLine  shift, and go to state 77
    COMMA    shift, and go to state 78


State 4

   64 DirichletBC: DISP . NewLine BCDataList

    NewLine  shift, and go to state 79


State 5

   65 NeumanBC: FORCE . NewLine BCDataList

    NewLine  shift, and go to state 80


State 6

   66 IVel: IVEL . NewLine BCDataList

    NewLine  shift, and go to state 81


State 7

   67 IAcc: IACC . NewLine BCDataList

    NewLine  shift, and go to state 82


State 8

   78 IStr: ISTR . NewLine IStressList

    NewLine  shift, and go to state 83


State 9

   86 SetLarge: JAUMA . NewLine

    NewLine  shift, and go to state 84


State 10

   89 SetGravity: GRAV . NewLine Float Float Float NewLine

    NewLine  shift, and go to state 85


State 11

   90 SetAttribute: ATT . NewLine AttList
   91             | ATT . COMMA TYPE EQUALSIGN EPART NewLine PAttList

    NewLine  shift, and go to state 86
    COMMA    shift, and go to state 87


State 12

  100 ReadCurve: CURVE . COMMA ID EQUALSIGN Integer NewLine CurveDataList
  101          | CURVE . NewLine CurveDataList

    NewLine  shift, and go to state 88
    COMMA    shift, and go to state 89


State 13

  105 SetEndTime: TERM . NewLine Float NewLine

    NewLine  shift, and go to state 90


State 14

   82 Pressure: PRESSURE . NewLine PressureList

    NewLine  shift, and go to state 91


State 15

   72 BoundaryFix: FIXED . NewLine BCFDataList

    NewLine  shift, and go to state 92


State 16

  107 TimeStep: TIMESTEP . NewLine Float NewLine
  108         | TIMESTEP . COMMA TYPE EQUALSIGN TIMESTEP_AUTO NewLine Float NewLine
  109         | TIMESTEP . COMMA TYPE EQUALSIGN TIMESTEP_FIXED NewLine Float NewLine
  110         | TIMESTEP . COMMA TYPE EQUALSIGN TIMESTEP_CURVE NewLine Integer NewLine

    NewLine  shift, and go to state 93
    COMMA    shift, and go to state 94


State 17

  111 Solver: SOLV . NewLine DYNA NewLine

    NewLine  shift, and go to state 95


State 18

  112 OutInfo: OUTPUT . NewLine Integer Integer NewLine NOutList NewLine EOutList NewLine
  113        | OUTPUT . NewLine Integer Float NewLine NOutList NewLine EOutList NewLine
  114        | OUTPUT . NewLine Float NewLine NOutList NewLine EOutList NewLine
  115        | OUTPUT . NewLine Float NewLine
  116        | OUTPUT . NewLine Integer Integer NewLine
  117        | OUTPUT . NewLine Integer Float NewLine
  118        | OUTPUT . NewLine Integer Integer NewLine NOutList NewLine
  119        | OUTPUT . NewLine Integer Float NewLine NOutList NewLine
  120        | OUTPUT . NewLine Float NewLine NOutList NewLine
  121        | OUTPUT . NewLine Integer Integer NewLine EOutList NewLine
  122        | OUTPUT . NewLine Integer Float NewLine EOutList NewLine
  123        | OUTPUT . NewLine Float NewLine EOutList NewLine

    NewLine  shift, and go to state 96


State 19

  129 History: HISTORY . NewLine Integer NewLine

    NewLine  shift, and go to state 97


State 20

  130 HisOutput: HISOUTPUT . NewLine Float NewLine

    NewLine  shift, and go to state 98


State 21

   87 HourGlassControl: HOURGLASS . NewLine Integer NewLine
   88                 | HOURGLASS . NewLine Integer Float NewLine

    NewLine  shift, and go to state 99


State 22

  137 WriteStatus: STATUSFILE . NewLine Float NewLine
  138            | STATUSFILE . NewLine Integer NewLine

    NewLine  shift, and go to state 100


State 23

  139 DeleteElement: REMOVE . NewLine DelElList
  140              | REMOVE . COMMA TYPE EQUALSIGN EPART NewLine DelPList

    NewLine  shift, and go to state 101
    COMMA    shift, and go to state 102


State 24

  145 Bulk_Visco: BULK_VISCOSITY . NewLine Float Float NewLine

    NewLine  shift, and go to state 103


State 25

  131 NodeForHis: HISNODE . NewLine HisNodeList

    NewLine  shift, and go to state 104


State 26

  134 ElemForHis: HISELEM . NewLine HisEleList

    NewLine  shift, and go to state 105


State 27

  146 DebugFlg: DEBUGFLG . NewLine

    NewLine  shift, and go to state 106


State 28

  147 ClearDV: CLEARDVFLG . NewLine

    NewLine  shift, and go to state 107


State 29

  148 LocalDamping: LOCALDAMP . NewLine
  149             | LOCALDAMP . NewLine Float NewLine

    NewLine  shift, and go to state 108


State 30

  150 CombinedDamping: COMBINEDDAMP . NewLine
  151                | COMBINEDDAMP . NewLine Float NewLine

    NewLine  shift, and go to state 109


State 31

  152 StaticTerm: STATICTERM . NewLine
  153           | STATICTERM . NewLine Float NewLine

    NewLine  shift, and go to state 110


State 32

  154 ExportFlac: EXPORTFLAC . NewLine

    NewLine  shift, and go to state 111


State 33

  155 NodePart: NODEPART . COMMA ID EQUALSIGN Integer NewLine PartList

    COMMA  shift, and go to state 112


State 34

  156 ElemPart: ELEMPART . COMMA ID EQUALSIGN Integer NewLine PartList

    COMMA  shift, and go to state 113


State 35

  159 FenQu: FENQUPL . NewLine Float Float Float Float NewLine

    NewLine  shift, and go to state 114


State 36

    0 $accept: FinalizedData . $end

    $end  shift, and go to state 115


State 37

    1 FinalizedData: All . END
    3 All: All . Component

    NODE            shift, and go to state 1
    ELEMENT         shift, and go to state 2
    END             shift, and go to state 116
    MATERIAL        shift, and go to state 3
    DISP            shift, and go to state 4
    FORCE           shift, and go to state 5
    IVEL            shift, and go to state 6
    IACC            shift, and go to state 7
    ISTR            shift, and go to state 8
    JAUMA           shift, and go to state 9
    GRAV            shift, and go to state 10
    ATT             shift, and go to state 11
    CURVE           shift, and go to state 12
    TERM            shift, and go to state 13
    PRESSURE        shift, and go to state 14
    FIXED           shift, and go to state 15
    TIMESTEP        shift, and go to state 16
    SOLV            shift, and go to state 17
    OUTPUT          shift, and go to state 18
    HISTORY         shift, and go to state 19
    HISOUTPUT       shift, and go to state 20
    HOURGLASS       shift, and go to state 21
    STATUSFILE      shift, and go to state 22
    REMOVE          shift, and go to state 23
    BULK_VISCOSITY  shift, and go to state 24
    HISNODE         shift, and go to state 25
    HISELEM         shift, and go to state 26
    DEBUGFLG        shift, and go to state 27
    CLEARDVFLG      shift, and go to state 28
    LOCALDAMP       shift, and go to state 29
    COMBINEDDAMP    shift, and go to state 30
    STATICTERM      shift, and go to state 31
    EXPORTFLAC      shift, and go to state 32
    NODEPART        shift, and go to state 33
    ELEMPART        shift, and go to state 34
    FENQUPL         shift, and go to state 35

    NODE            [reduce using rule 106 (TimeStep)]
    NODE            [reduce using rule 128 (History)]
    ELEMENT         [reduce using rule 106 (TimeStep)]
    ELEMENT         [reduce using rule 128 (History)]
    END             [reduce using rule 106 (TimeStep)]
    END             [reduce using rule 128 (History)]
    MATERIAL        [reduce using rule 106 (TimeStep)]
    MATERIAL        [reduce using rule 128 (History)]
    DISP            [reduce using rule 106 (TimeStep)]
    DISP            [reduce using rule 128 (History)]
    FORCE           [reduce using rule 106 (TimeStep)]
    FORCE           [reduce using rule 128 (History)]
    IVEL            [reduce using rule 106 (TimeStep)]
    IVEL            [reduce using rule 128 (History)]
    IACC            [reduce using rule 106 (TimeStep)]
    IACC            [reduce using rule 128 (History)]
    ISTR            [reduce using rule 106 (TimeStep)]
    ISTR            [reduce using rule 128 (History)]
    JAUMA           [reduce using rule 106 (TimeStep)]
    JAUMA           [reduce using rule 128 (History)]
    GRAV            [reduce using rule 106 (TimeStep)]
    GRAV            [reduce using rule 128 (History)]
    ATT             [reduce using rule 106 (TimeStep)]
    ATT             [reduce using rule 128 (History)]
    CURVE           [reduce using rule 106 (TimeStep)]
    CURVE           [reduce using rule 128 (History)]
    TERM            [reduce using rule 106 (TimeStep)]
    TERM            [reduce using rule 128 (History)]
    PRESSURE        [reduce using rule 106 (TimeStep)]
    PRESSURE        [reduce using rule 128 (History)]
    FIXED           [reduce using rule 106 (TimeStep)]
    FIXED           [reduce using rule 128 (History)]
    TIMESTEP        [reduce using rule 106 (TimeStep)]
    TIMESTEP        [reduce using rule 128 (History)]
    SOLV            [reduce using rule 106 (TimeStep)]
    SOLV            [reduce using rule 128 (History)]
    OUTPUT          [reduce using rule 106 (TimeStep)]
    OUTPUT          [reduce using rule 128 (History)]
    HISTORY         [reduce using rule 106 (TimeStep)]
    HISTORY         [reduce using rule 128 (History)]
    HISOUTPUT       [reduce using rule 106 (TimeStep)]
    HISOUTPUT       [reduce using rule 128 (History)]
    HOURGLASS       [reduce using rule 106 (TimeStep)]
    HOURGLASS       [reduce using rule 128 (History)]
    STATUSFILE      [reduce using rule 106 (TimeStep)]
    STATUSFILE      [reduce using rule 128 (History)]
    REMOVE          [reduce using rule 106 (TimeStep)]
    REMOVE          [reduce using rule 128 (History)]
    BULK_VISCOSITY  [reduce using rule 106 (TimeStep)]
    BULK_VISCOSITY  [reduce using rule 128 (History)]
    HISNODE         [reduce using rule 106 (TimeStep)]
    HISNODE         [reduce using rule 128 (History)]
    HISELEM         [reduce using rule 106 (TimeStep)]
    HISELEM         [reduce using rule 128 (History)]
    DEBUGFLG        [reduce using rule 106 (TimeStep)]
    DEBUGFLG        [reduce using rule 128 (History)]
    CLEARDVFLG      [reduce using rule 106 (TimeStep)]
    CLEARDVFLG      [reduce using rule 128 (History)]
    LOCALDAMP       [reduce using rule 106 (TimeStep)]
    LOCALDAMP       [reduce using rule 128 (History)]
    COMBINEDDAMP    [reduce using rule 106 (TimeStep)]
    COMBINEDDAMP    [reduce using rule 128 (History)]
    STATICTERM      [reduce using rule 106 (TimeStep)]
    STATICTERM      [reduce using rule 128 (History)]
    EXPORTFLAC      [reduce using rule 106 (TimeStep)]
    EXPORTFLAC      [reduce using rule 128 (History)]
    NODEPART        [reduce using rule 106 (TimeStep)]
    NODEPART        [reduce using rule 128 (History)]
    ELEMPART        [reduce using rule 106 (TimeStep)]
    ELEMPART        [reduce using rule 128 (History)]
    FENQUPL         [reduce using rule 106 (TimeStep)]
    FENQUPL         [reduce using rule 128 (History)]

    Component         go to state 117
